--- a/vignettes/V_01.Rmd
+++ b/vignettes/V_01.Rmd
@@ -20,33 +20,6 @@ library(youthvars)
 library(TTU)
 ```
 
-
-```{r}
-# transform_dyad_for_analysis <- function(data_Ready4useDyad){
-#   data_Ready4useDyad@ds_tb <- data_Ready4useDyad@ds_tb %>%
-#             youthvars::transform_raw_ds_for_analysis()
-#   data_Ready4useDyad@dictionary_r3 <- data_Ready4useDyad@dictionary_r3 %>%
-#     dplyr::mutate(var_nm_chr = dplyr::case_when(var_nm_chr == "phq9_total" ~  "PHQ9",
-#                                                 var_nm_chr == "bads_total" ~ "BADS",
-#                                                 var_nm_chr == "gad7_total" ~ "GAD7",
-#                                                 var_nm_chr == "oasis_total" ~ "OASIS",
-#                                                 var_nm_chr == "scared_total" ~ "SCARED",
-#                                                 var_nm_chr == "k6_total" ~ "K6",
-#                                                 var_nm_chr == "sofas_total" ~ "SOFAS",
-#                                                 T ~ var_nm_chr %>% purrr::map_chr(~.x)
-#                                                 ))
-#   return(data_Ready4useDyad)
-# }
-```
-
-```{r}
-# A <- Ready4useRepos(gh_repo_1L_chr = "ready4-dev/youthvars", 
-#                           gh_tag_1L_chr = "Documentation_0.0") %>%  
-#   ingest(fls_to_ingest_chr = "ymh_YouthvarsSeries",
-#          metadata_1L_lgl = F) 
-# A@a_Ready4useDyad <- transform_dyad_for_analysis(A@a_Ready4useDyad)
-```
-
 ```{r}
 A <- Ready4useDyad(ds_tb = Ready4useRepos(dv_nm_1L_chr = "fakes",
                                           dv_ds_nm_1L_chr = "https://doi.org/10.7910/DVN/HJXYKQ",
@@ -71,7 +44,7 @@ A <- YouthvarsSeries(a_Ready4useDyad = A,
 ```
 
 ```{r}
-A <- TTUParameters(a_ScorzProfile = ScorzAqol6Adol(a_YouthvarsProfile = A))
+A <- TTUProject(a_ScorzProfile = ScorzAqol6Adol(a_YouthvarsProfile = A))
 ```
 ```{r}
 # Make into renew method
@@ -115,17 +88,15 @@ A <- renewSlot(A,
             "d_interview_date") 
 ```
 ```{r}
-A <- renewSlot(A,
-               "paths_chr",
-               tempdir()) %>%
-  renewSlot("b_SpecificParameters@fake_1L_lgl",
-            T) 
+A <-  renewSlot(A,
+                "b_SpecificParameters@fake_1L_lgl",
+                T) 
 ```
 
 ```{r}
 B <- SpecificModels(a_YouthvarsProfile = A@a_ScorzProfile@a_YouthvarsProfile,
                     b_SpecificParameters = A@b_SpecificParameters,
-                    paths_chr = A@paths_chr)
+                    paths_chr = tempdir())
 ```
 
 ```{r}
@@ -227,7 +198,7 @@ B <- investigate(B,
 The model objects created and saved in our working directory by the preceding steps are not suitable for public dissemination. They are both too large in file size and, more importantly, include copies of our source dataset. We can overcome these limitations by creating shareable versions of the models. Two types of shareable version are created - copies of the original model objects in which fake data overwrites the original source data and tables of model coefficients.
 
 ```{r}
-B <- authorData(B)#ERROR
+B <- authorData(B)
 ```
 
 ## Specify study reporting metadata
@@ -310,7 +281,7 @@ B <- procureSlot(C,
             "Quality Adjusted Life Years (QALYs) are often used in economic evaluations, yet utility weights for deriving them are rarely directly measured in mental health services.") %>%
   renewSlot("coi_1L_chr", "None declared") %>%
   renewSlot("conclusion_1L_chr",
-            "Adolescent AQoL-6D utility can be derived from a range of psychological distress, depression and anxiety measures. TTU algorithms estimated from cross-sectional data can approximate longitudinal change but may slightly bias QALY predictions.") %>%
+            "Nothing should be concluded from this study as it is purely hypothetical.") %>%
   renewSlot("ethics_1L_chr", 
             "The study was reviewed and granted approval by no-one." ) %>%
   renewSlot("funding_1L_chr", 
@@ -368,12 +339,24 @@ author(C,
 We create the files we will be using for figures submitted to our target journal and also a table of all the dependency packages used in our analysis and reporting.
 
 ```{r}
+R.utils::copyDirectory(paste0(C@a_TTUSynopsis@a_Ready4showPaths@outp_data_dir_1L_chr,
+                              "/",
+                              C@a_TTUSynopsis@a_Ready4showPaths@mkdn_data_dir_1L_chr,
+                              "/Manuscript_Auto"),
+                       paste0(C@a_TTUSynopsis@a_Ready4showPaths@outp_data_dir_1L_chr,
+                              "/",
+                              C@a_TTUSynopsis@a_Ready4showPaths@mkdn_data_dir_1L_chr,
+                              "/Manuscript_Submission"))
+```
+
+
+```{r}
 author(C,
        depnt_var_desc_1L_chr = "AQoL-6D",
        timepoint_new_nms_chr = c("Baseline","Follow-up"),
        type_1L_chr = "Plots",
        what_1L_chr = "Manuscript_Submission")
-author(C,
+author(C,## ERROR
        type_1L_chr = "Dependencies",
        what_1L_chr = "Manuscript_Submission")
 
@@ -382,11 +365,6 @@ author(C,
 We can now customise the template manuscript program so that it can generate the manuscript we plan on submitting. It is recommended that the updated manuscript generation program is saved in a new sub-directory, for example "Manuscript_Submission". Once we have done this (a step undertaken manually, not by this algorithm)  we can the following command to author the submission manuscript.
 
 ```{r}
-if(paste0(C@a_TTUSynopsis@a_Ready4showPaths@outp_data_dir_1L_chr,
-          "/",
-          C@a_TTUSynopsis@a_Ready4showPaths@mkdn_data_dir_1L_chr,
-          "/Manuscript_Submission") %>% 
-   dir.exists()){
   C <- C %>%
            renewSlot("a_TTUSynopsis@tables_in_body_lgl",
                      F) %>%
@@ -395,25 +373,19 @@ if(paste0(C@a_TTUSynopsis@a_Ready4showPaths@outp_data_dir_1L_chr,
   author(C,
          download_tmpl_1L_lgl = F,
          what_1L_chr = "Manuscript_Submission")
-}
 ```
 
 We now generate the Supplementary Information for the submission manuscript.
 
 ```{r}
-if(paste0(C@a_TTUSynopsis@a_Ready4showPaths@outp_data_dir_1L_chr,
-          "/",
-          C@a_TTUSynopsis@a_Ready4showPaths@mkdn_data_dir_1L_chr,
-          "/Manuscript_Submission") %>% 
-   dir.exists()){
-  authorReport(C %>%
+authorReport(C %>%
                  renewSlot("a_TTUSynopsis@rmd_fl_nms_ls",
                            ready4show::make_rmd_fl_nms_ls(pdf_fl_nm_1L_chr = "TA_PDF")) %>%
                  procureSlot("a_TTUSynopsis"),
                fl_nm_1L_chr = "Supplement",
                #download_tmpl_1L_lgl = F,
-               what_1L_chr = "Manuscript_Submission")
-}
+               what_1L_chr = "Manuscript_Submission") # ERROR
+
 ```
 
 # Tidy workspace
@@ -421,6 +393,23 @@ The preceding steps saved multiple objects (mostly R model objects) that have em
 
 ```{r}
 author(B,
-       type_1L_chr = "purge_write")
+       type_1L_chr = "purge_write") # Authors (again?) catalogue. ???
 ```
 
+```{r echo=FALSE}
+# transform_dyad_for_analysis <- function(data_Ready4useDyad){
+#   data_Ready4useDyad@ds_tb <- data_Ready4useDyad@ds_tb %>%
+#             youthvars::transform_raw_ds_for_analysis()
+#   data_Ready4useDyad@dictionary_r3 <- data_Ready4useDyad@dictionary_r3 %>%
+#     dplyr::mutate(var_nm_chr = dplyr::case_when(var_nm_chr == "phq9_total" ~  "PHQ9",
+#                                                 var_nm_chr == "bads_total" ~ "BADS",
+#                                                 var_nm_chr == "gad7_total" ~ "GAD7",
+#                                                 var_nm_chr == "oasis_total" ~ "OASIS",
+#                                                 var_nm_chr == "scared_total" ~ "SCARED",
+#                                                 var_nm_chr == "k6_total" ~ "K6",
+#                                                 var_nm_chr == "sofas_total" ~ "SOFAS",
+#                                                 T ~ var_nm_chr %>% purrr::map_chr(~.x)
+#                                                 ))
+#   return(data_Ready4useDyad)
+# }
+```
