--- a/vignettes/V_01.Rmd
+++ b/vignettes/V_01.Rmd
@@ -48,64 +48,51 @@ A <- TTUProject(a_ScorzProfile = ScorzAqol6Adol(a_YouthvarsProfile = A))
 ```
 ```{r}
 # Make into renew method
-A <- renewSlot(A,
-               "a_ScorzProfile")
-A <- renewSlot(A,
-               "b_SpecificParameters",
-               SpecificConverter(a_ScorzProfile = A@a_ScorzProfile) %>%
+A <- renewSlot(A, "a_ScorzProfile")
+A <- renewSlot(A, "b_SpecificParameters", SpecificConverter(a_ScorzProfile = A@a_ScorzProfile) %>%
                  metamorphose() %>%
                  procureSlot("b_SpecificParameters"))
 ```
 
 ```{r}
-A <- renewSlot(A,
-               "b_SpecificParameters@predictors_lup",
-               Ready4useRepos(dv_nm_1L_chr = "TTU", 
-                              dv_ds_nm_1L_chr = "https://doi.org/10.7910/DVN/DKDIB0", 
-                              dv_server_1L_chr = "dataverse.harvard.edu") %>%
+A <- renewSlot(A, "b_SpecificParameters@predictors_lup", Ready4useRepos(dv_nm_1L_chr = "TTU", 
+                                                                        dv_ds_nm_1L_chr = "https://doi.org/10.7910/DVN/DKDIB0", 
+                                                                        dv_server_1L_chr = "dataverse.harvard.edu") %>%
                  ingest(fls_to_ingest_chr = c("predictors_r3"),
                         metadata_1L_lgl = F)) 
 ```
 ```{r}
-exhibitSlot(A,
-               "b_SpecificParameters@predictors_lup")
+exhibitSlot(A, "b_SpecificParameters@predictors_lup")
 ```
 
 ```{r}
-A <- renewSlot(A,
-            "b_SpecificParameters@depnt_var_min_max_dbl",
-               c(0.03,1)) %>%
-  renewSlot("b_SpecificParameters@candidate_predrs_chr",
-            c("BADS","GAD7", "K6", "OASIS", "PHQ9", "SCARED")) %>%
-  renewSlot("b_SpecificParameters@candidate_covars_chr",
-            c("d_sex_birth_s", "d_age",  "d_sexual_ori_s", "d_studying_working",
-              "c_p_diag_s", "c_clinical_staging_s", "SOFAS")) %>%
-  renewSlot("b_SpecificParameters@descv_var_nms_chr",
-             c("d_age","Gender","d_relation_s",
-               "d_sexual_ori_s", "Region", "d_studying_working",
-               "c_p_diag_s", "c_clinical_staging_s","SOFAS")) %>%
-  renewSlot("b_SpecificParameters@msrmnt_date_var_nm_1L_chr",
-            "d_interview_date") 
+A <- renewSlot(A, "b_SpecificParameters@depnt_var_min_max_dbl", c(0.03,1)) %>% # Inherit From TTUAqolAdol
+  renewSlot("b_SpecificParameters@candidate_predrs_chr", c("BADS","GAD7", "K6", "OASIS", "PHQ9", "SCARED")) %>%
+  renewSlot("b_SpecificParameters@candidate_covars_chr", c("d_sex_birth_s", "d_age",  "d_sexual_ori_s", 
+                                                           "d_studying_working", "c_p_diag_s", "c_clinical_staging_s",
+                                                           "SOFAS")) %>%
+  renewSlot("b_SpecificParameters@descv_var_nms_chr", c("d_age","Gender","d_relation_s", "d_sexual_ori_s", 
+                                                        "Region", "d_studying_working", "c_p_diag_s", 
+                                                        "c_clinical_staging_s","SOFAS")) %>%
+  renewSlot("b_SpecificParameters@msrmnt_date_var_nm_1L_chr", "d_interview_date") 
 ```
 ```{r}
-A <-  renewSlot(A,
-                "b_SpecificParameters@fake_1L_lgl",
-                T) 
+A <-  renewSlot(A, "b_SpecificParameters@fake_1L_lgl", T) 
 ```
 
 ```{r}
-B <- SpecificModels(a_YouthvarsProfile = A@a_ScorzProfile@a_YouthvarsProfile,
-                    b_SpecificParameters = A@b_SpecificParameters,
-                    paths_chr = tempdir())
+A <- renewSlot(A, "c_SpecificProject", SpecificModels(a_YouthvarsProfile = A@a_ScorzProfile@a_YouthvarsProfile,
+                                                      b_SpecificParameters = A@b_SpecificParameters,
+                                                      paths_chr = tempdir())) 
 ```
 
 ```{r}
-B <- ratify(B)
+A <- ratifySlot(A, "c_SpecificProject")
 ```
 
 ```{r}
-B <- author(B,
-            what_1L_chr = "workspace")
+A <- renewSlot(A, "c_SpecificProject", 
+               authorSlot(A, "c_SpecificProject", what_1L_chr = "workspace"))
 ```
 
 ## Generate descriptive statistics
@@ -113,9 +100,9 @@ B <- author(B,
 We now generate tables and charts that describe our dataset. These are saved in a sub-directory of our output data directory.
 
 ```{r}
-B <- author(B,
-            what_1L_chr = "descriptives",
-            digits_1L_int = 3L)
+A <- renewSlot(A, "c_SpecificProject",
+               authorSlot(A, "c_SpecificProject", what_1L_chr = "descriptives",
+                          digits_1L_int = 3L))
 ```
 
 ## Undertake exploratory modelling using baseline dataset
@@ -124,41 +111,46 @@ B <- author(B,
 We next compare the performance of different model types. This step saves model objects and plots to a sub-directory of our output directory and outputs a `SpecificPredictors` object.
 
 ```{r}
-B <- investigate(B,
-                 depnt_var_max_val_1L_dbl = 0.99,# Parent method argument
-                 session_ls = sessionInfo())
+A <- renewSlot(A, "c_SpecificProject",
+               investigateSlot(A, "c_SpecificProject",
+                               depnt_var_max_val_1L_dbl = 0.99,# Parent method argument
+                               session_ls = sessionInfo()))
 ```
 
 After inspecting the output of the previous command, we can now specify the preferred model types to use from this point onwards.
 
 ```{r}
-B <- renew(B,
-           new_val_xx = c("GLM_GSN_LOG", "OLS_CLL"),
-           type_1L_chr = "results",
-           what_1L_chr = "prefd_mdls")
+A <- renewSlot(A, "c_SpecificProject",
+               renew(procureSlot(A, "c_SpecificProject"),
+                     new_val_xx = c("GLM_GSN_LOG", "OLS_CLL"),
+                     type_1L_chr = "results",
+                     what_1L_chr = "prefd_mdls"))
 ```
 
 ### Identify preferred predictors and covariates
 Next we assess multiple versions of our preferred model type - one single predictor model for each of our candidate predictors and the same models with candidate covariates added. The output is a `SpecificFixed` object, plus a number of model/plot objects saved locally.
 
 ```{r}
-B <- investigate(B)
+A <- renewSlot(A, "c_SpecificProject",
+               investigateSlot(A,"c_SpecificProject"))
 ```
 
 ### Assess performance of final model specification 
 After reviewing the output of the previous step, we specify the covariates we wish to add to the models.
 
 ```{r}
-B <- renew(B,
-           new_val_xx = "SOFAS",
-           type_1L_chr = "results",
-           what_1L_chr = "prefd_covars")
+A <- renewSlot(A, "c_SpecificProject",
+               renew(procureSlot(A, "c_SpecificProject"),
+                     new_val_xx = "SOFAS",
+                     type_1L_chr = "results",
+                     what_1L_chr = "prefd_covars"))
 ```
 
 We now assess the multivariate models. The output is a `SpecificMixed` object and more locally saved model/plot objects.
 
 ```{r}
-B <- investigate(B)
+A <- renewSlot(A, "c_SpecificProject",
+               investigateSlot(A, "c_SpecificProject"))
 ```
 
 ## Undertake longitudinal modelling
@@ -168,28 +160,29 @@ We next reformulate the models we finalised in the previous step so that they ar
 For our primary analysis, we use the longitudinal formulation of the models we previously selected. As with previous steps the output of this analysis is stored in the `F1` object and in files written to the local output data directory.
 
 ```{r}
-B <- investigate(B)
+A <- renewSlot(A, "c_SpecificProject",
+               investigateSlot(A, "c_SpecificProject"))
 ```
 
 ### Secondary analyses
 For our secondary analyses, we specify alternative combinations of predictors and covariates.
 
 ```{r}
-scndry_anlys_params_ls <- make_scndry_anlys_params(candidate_predrs_chr = c("SOFAS"),
-                                                    candidate_covar_nms_chr = c("d_sex_birth_s", 
-                                                                                "d_age", 
-                                                                                "d_sexual_ori_s",
-                                                                                "d_studying_working"),
-                                                    prefd_covars_chr = NA_character_) %>%
-  make_scndry_anlys_params(candidate_predrs_chr = c("SCARED","OASIS","GAD7"),
-                           candidate_covar_nms_chr = c("PHQ9", "SOFAS", 
-                                                       "d_sex_birth_s", 
-                                                       "d_age", 
-                                                       "d_sexual_ori_s",
-                                                       "d_studying_working"),
-                           prefd_covars_chr = "PHQ9")
-B <- investigate(B, 
-                 scndry_anlys_params_ls = scndry_anlys_params_ls)
+A <- renewSlot(A, "c_SpecificProject",
+               investigateSlot(A, "c_SpecificProject",
+                               scndry_anlys_params_ls = make_scndry_anlys_params(candidate_predrs_chr = c("SOFAS"),
+                                                                                 candidate_covar_nms_chr = c("d_sex_birth_s", 
+                                                                                                             "d_age", 
+                                                                                                             "d_sexual_ori_s",
+                                                                                                             "d_studying_working"),
+                                                                                 prefd_covars_chr = NA_character_) %>%
+                                 make_scndry_anlys_params(candidate_predrs_chr = c("SCARED","OASIS","GAD7"),
+                                                          candidate_covar_nms_chr = c("PHQ9", "SOFAS", 
+                                                                                      "d_sex_birth_s", 
+                                                                                      "d_age", 
+                                                                                      "d_sexual_ori_s",
+                                                                                      "d_studying_working"),
+                                                          prefd_covars_chr = "PHQ9")))
 ```
 
 # Report and disseminate findings
@@ -198,40 +191,42 @@ B <- investigate(B,
 The model objects created and saved in our working directory by the preceding steps are not suitable for public dissemination. They are both too large in file size and, more importantly, include copies of our source dataset. We can overcome these limitations by creating shareable versions of the models. Two types of shareable version are created - copies of the original model objects in which fake data overwrites the original source data and tables of model coefficients.
 
 ```{r}
-B <- authorData(B)
+A <- renewSlot(A, "c_SpecificProject",
+               authorData(procureSlot(A, "c_SpecificProject")))
 ```
 
 ## Specify study reporting metadata
 We create a `TTUSynopsis` object that contains the fields necessary to render and share reports.
 
 ```{r}
-B <- metamorphose(B)
-B <- TTUSynopsis(a_Ready4showPaths = B@a_Ready4showPaths,
-                 b_SpecificResults = B@b_SpecificResults,
-                 c_SpecificParameters = B@c_SpecificParameters,
-                 d_YouthvarsProfile = B@d_YouthvarsProfile,
-                 rmd_fl_nms_ls = B@rmd_fl_nms_ls)
+A <- renewSlot(A, "d_TTUReports",
+               {
+                 Y <- metamorphoseSlot(A, "c_SpecificProject")
+                 Y <- TTUSynopsis(a_Ready4showPaths = Y@a_Ready4showPaths,
+                                  b_SpecificResults = Y@b_SpecificResults,
+                                  c_SpecificParameters = Y@c_SpecificParameters,
+                                  d_YouthvarsProfile = Y@d_YouthvarsProfile,
+                                  rmd_fl_nms_ls = Y@rmd_fl_nms_ls)
+                 Y <- TTUReports(a_TTUSynopsis = Y)
+                 Y
+                 }
+               )
 ```
 
 We add metadata relevant to the reports that we will be generating to these fields.
 
 ```{r}
-B <- B %>% 
-  renewSlot("authors_r3", 
-            ready4show::authors_tb) %>%
-        renewSlot("institutes_r3", 
-                  ready4show::institutes_tb) %>%
-  renewSlot("digits_int", c(3L,3L)) %>%
-  renewSlot("outp_formats_chr", c("PDF","PDF")) %>%
-  renewSlot("title_1L_chr", 
-            "A hypothetical utility mapping study using fake data") %>%
-  renewSlot("correspondences_r3",
-            old_nms_chr = c("PHQ9", "GAD7"),
-            new_nms_chr = c("PHQ-9", "GAD-7")) %>%
-      renewSlot("e_Ready4useRepos",
-                Ready4useRepos(dv_nm_1L_chr = "fakes", 
-                               dv_ds_nm_1L_chr = "https://doi.org/10.7910/DVN/D74QMP", 
-                               dv_server_1L_chr = "dataverse.harvard.edu"))
+A <- renewSlot(A, "d_TTUReports@a_TTUSynopsis",
+               procureSlot(A, "d_TTUReports@a_TTUSynopsis") %>% 
+                 renewSlot("authors_r3", ready4show::authors_tb) %>%
+                 renewSlot("institutes_r3", ready4show::institutes_tb) %>%
+                 renewSlot("digits_int", c(3L,3L)) %>%
+                 renewSlot("outp_formats_chr", c("PDF","PDF")) %>%
+                 renewSlot("title_1L_chr", "A hypothetical utility mapping study using fake data") %>%
+                 renewSlot("correspondences_r3", old_nms_chr = c("PHQ9", "GAD7"), new_nms_chr = c("PHQ-9", "GAD-7")) %>%
+                 renewSlot("e_Ready4useRepos", Ready4useRepos(dv_nm_1L_chr = "fakes", 
+                                                              dv_ds_nm_1L_chr = "https://doi.org/10.7910/DVN/D74QMP", 
+                                                              dv_server_1L_chr = "dataverse.harvard.edu"))) 
 
 ```
 
@@ -239,137 +234,107 @@ B <- B %>%
 We now create a `TTUReports` object, that we can use to efficiently retrieve and apply programs that can summarise our study results.
 
 ```{r}
-C <- TTUReports(a_TTUSynopsis = B)
+# C <- TTUReports(a_TTUSynopsis = B)
 ```
 
 ### Author model catalogues
 We download a program for generating a catalogue of models and use it to summarising the models created under each study analysis (one primary and two secondary). The catalogues are saved locally.
 
 ```{r}
-author(C,
-       download_tmpl_1L_lgl = T,
-       what_1L_chr = "Catalogue")
+authorSlot(A, "d_TTUReports", what_1L_chr = "Catalogue", download_tmpl_1L_lgl = T)
 ```
 
 ### Share model catalogue
 We share the catalogues that we created, uploading a copy to our study online repository. To run this step you will need write permissions to the online repository.
 
 ```{r}
-shareSlot(C,
-          slot_nm_1L_chr = "a_TTUSynopsis",
-          type_1L_chr = "Report",
-          what_1L_chr = "Catalogue")
+shareSlot(A, "d_TTUReports@a_TTUSynopsis", type_1L_chr = "Report", what_1L_chr = "Catalogue") # Outputs df
 ```
 
 ### Share models
 We share tables of coefficients and other meta-data about the models we have created by posting them to the online repository. The object we create and share is designed to be used in conjunction with the `youthu` package to make it easier to make predictions with these models using new data. Again, you will need write permissions to the online repository.
 
 ```{r}
-shareSlot(C,
-          "a_TTUSynopsis",
-          type_1L_chr = "Models",
-          what_1L_chr = "ingredients")
+shareSlot(A, "d_TTUReports@a_TTUSynopsis", type_1L_chr = "Models", what_1L_chr = "ingredients")
 ```
 
 ## Author manuscript
 We add some content about the manuscript we wish to author.
 
 ```{r}
-B <- procureSlot(C,
-                 "a_TTUSynopsis") %>% 
-  renewSlot("background_1L_chr",
-            "Quality Adjusted Life Years (QALYs) are often used in economic evaluations, yet utility weights for deriving them are rarely directly measured in mental health services.") %>%
-  renewSlot("coi_1L_chr", "None declared") %>%
-  renewSlot("conclusion_1L_chr",
-            "Nothing should be concluded from this study as it is purely hypothetical.") %>%
-  renewSlot("ethics_1L_chr", 
-            "The study was reviewed and granted approval by no-one." ) %>%
-  renewSlot("funding_1L_chr", 
-            "The study was funded by no-one.") %>%
-  renewSlot("interval_chr", 
-            "three months") %>%
-  renewSlot("keywords_chr", 
-            c("anxiety", "AQoL","depression", 
-              "psychological distress", "QALYs", "utility mapping")) %>%
-  renewSlot("sample_desc_1L_chr",
-            "The study sample is fake data.") 
-C <- renewSlot(C,
-               "a_TTUSynopsis",
-               B)
-```
-
-We add arguments to help us create an abstract for the the manuscript.
-
-```{r}
-C <- C %>%
-  renewSlot("a_TTUSynopsis@abstract_args_ls",
-            manufactureSlot(C,
-                            "a_TTUSynopsis",
-                            what_1L_chr = "abstract_args_ls")) 
+A <- renewSlot(A, "d_TTUReports@a_TTUSynopsis",
+               procureSlot(A, "d_TTUReports@a_TTUSynopsis") %>% 
+                 renewSlot("background_1L_chr", "Quality Adjusted Life Years (QALYs) are often used in economic evaluations, yet utility weights for deriving them are rarely directly measured in mental health services.") %>%
+                 renewSlot("coi_1L_chr", "None declared") %>%
+                 renewSlot("conclusion_1L_chr","Nothing should be concluded from this study as it is purely hypothetical.") %>%
+                 renewSlot("ethics_1L_chr", "The study was reviewed and granted approval by no-one." ) %>%
+                 renewSlot("funding_1L_chr", "The study was funded by no-one.") %>%
+                 renewSlot("interval_chr", "three months") %>%
+                 renewSlot("keywords_chr", c("anxiety", "AQoL","depression", "psychological distress", "QALYs", "utility mapping")) %>%
+                 renewSlot("sample_desc_1L_chr", "The study sample is fake data.") )
 ```
 
 We create a summary of results that can be interpreted by the program that authors the manuscript.
 
 ```{r}
-C <- enhanceSlot(C, 
-                 "a_TTUSynopsis",
-                 depnt_var_nms_chr = c("AQoL-6D",
-                                       "Adolescent AQoL Six Dimension"), 
-                 with_1L_chr = "results_ls")
+A <- renewSlot(A, "d_TTUReports@a_TTUSynopsis@abstract_args_ls",
+               manufactureSlot(A,"d_TTUReports@a_TTUSynopsis", what_1L_chr = "abstract_args_ls",
+                               depnt_var_nms_chr = c("AQoL-6D", "Adolescent AQoL Six Dimension"))) # port to parent manufacture method
+```
+
+```{r}
+A <- enhanceSlot(A, "d_TTUReports@a_TTUSynopsis", with_1L_chr = "results_ls",
+                 depnt_var_nms_chr = c("AQoL-6D", "Adolescent AQoL Six Dimension"),
+                 version_1L_chr = A@d_TTUReports@manuscript_tmpl_chr[2]) # Should be derived from scorz class
 ```
 
 We create and save the plots that will be used in the manuscript.
 
 ```{r}
-author(C,
-       depnt_var_desc_1L_chr = "AQoL-6D",
-       timepoint_new_nms_chr = c("Baseline","Follow-up"),
-       type_1L_chr = "Plots")
+authorSlot(A, "d_TTUReports", type_1L_chr = "Plots",
+           depnt_var_desc_1L_chr = A@d_TTUReports@a_TTUSynopsis@b_SpecificResults@a_SpecificShareable@shareable_outp_ls$results_ls$study_descs_ls$health_utl_nm_1L_chr)
+           #timepoint_new_nms_chr = c("Baseline","Follow-up"), # necessary?
 ```
 
 We download a program for generating a template manuscript and run it to author a first draft of the manuscript.
 
 ```{r}
-author(C,
-       download_tmpl_1L_lgl = T,
-       type_1L_chr = "Report",
-       what_1L_chr = "Manuscript_Auto")
+authorSlot(A, "d_TTUReports", type_1L_chr = "Report", what_1L_chr = "Manuscript_Auto", download_tmpl_1L_lgl = T)
 ```
 
 We create the files we will be using for figures submitted to our target journal and also a table of all the dependency packages used in our analysis and reporting.
 
 ```{r}
-R.utils::copyDirectory(paste0(C@a_TTUSynopsis@a_Ready4showPaths@outp_data_dir_1L_chr,
+R.utils::copyDirectory(paste0(A@d_TTUReports@a_TTUSynopsis@a_Ready4showPaths@outp_data_dir_1L_chr,
                               "/",
-                              C@a_TTUSynopsis@a_Ready4showPaths@mkdn_data_dir_1L_chr,
+                              A@d_TTUReports@a_TTUSynopsis@a_Ready4showPaths@mkdn_data_dir_1L_chr,
                               "/Manuscript_Auto"),
-                       paste0(C@a_TTUSynopsis@a_Ready4showPaths@outp_data_dir_1L_chr,
+                       paste0(A@d_TTUReports@a_TTUSynopsis@a_Ready4showPaths@outp_data_dir_1L_chr,
                               "/",
-                              C@a_TTUSynopsis@a_Ready4showPaths@mkdn_data_dir_1L_chr,
+                              A@d_TTUReports@a_TTUSynopsis@a_Ready4showPaths@mkdn_data_dir_1L_chr,
                               "/Manuscript_Submission"))
 ```
 
 
 ```{r}
-author(C,
-       depnt_var_desc_1L_chr = "AQoL-6D",
-       timepoint_new_nms_chr = c("Baseline","Follow-up"),
-       type_1L_chr = "Plots",
-       what_1L_chr = "Manuscript_Submission")
-author(C,## ERROR
-       type_1L_chr = "Dependencies",
-       what_1L_chr = "Manuscript_Submission")
+authorSlot(A, "d_TTUReports", type_1L_chr = "Plots", what_1L_chr = "Manuscript_Submission",
+           depnt_var_desc_1L_chr = "AQoL-6D" # Inherit from TTUAqolAdol
+           #,timepoint_new_nms_chr = c("Baseline","Follow-up")
+       )
+author(A@d_TTUReports, type_1L_chr = "Dependencies", what_1L_chr = "Manuscript_Submission") #ERROR
 
 ```
 
 We can now customise the template manuscript program so that it can generate the manuscript we plan on submitting. It is recommended that the updated manuscript generation program is saved in a new sub-directory, for example "Manuscript_Submission". Once we have done this (a step undertaken manually, not by this algorithm)  we can the following command to author the submission manuscript.
 
 ```{r}
-  C <- C %>%
-           renewSlot("a_TTUSynopsis@tables_in_body_lgl",
-                     F) %>%
-           renewSlot("a_TTUSynopsis@figures_in_body_lgl",
-                     F)
+## PICK UP HERE, REBUILD SPECIFIC AND CTLG AND SS MARKDOWN PROGRAMS
+
+C <- C %>%
+  renewSlot("a_TTUSynopsis@tables_in_body_lgl",
+            F) %>%
+  renewSlot("a_TTUSynopsis@figures_in_body_lgl",
+            F)
   author(C,
          download_tmpl_1L_lgl = F,
          what_1L_chr = "Manuscript_Submission")
