attempt at new v1

--- a/vignettes/V_01.Rmd
+++ b/vignettes/V_01.Rmd
@@ -17,6 +17,7 @@ More updates will appear here shortly.
 library(ready4)
 library(ready4use)
 library(youthvars)
+library(scorz)
 library(TTU)
 ```
 
